:has(:empty) still applied after the content is changed to not be empty https://bugs.webkit.org/show_bug.cgi?id=286403 rdar://143864358

Reviewed by NOBODY (OOPS!).

`invalidateForHasBeforeMutation()` has to invalidate for both insertions and deletions,
and `invalidateForHasAfterMutation()` has to invalidate when a deletion removed all children
for `:has(:empty)` to be invalidated correctly.

Test: imported/w3c/web-platform-tests/css/selectors/invalidation/empty-pseudo-in-has-display-none.html

* LayoutTests/imported/w3c/web-platform-tests/css/selectors/invalidation/empty-pseudo-in-has-display-none-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/selectors/invalidation/empty-pseudo-in-has-display-none.html: Added.
* Source/WebCore/style/ChildChangeInvalidation.cpp:
(WebCore::Style::ChildChangeInvalidation::invalidateForHasBeforeMutation):
(WebCore::Style::ChildChangeInvalidation::invalidateForHasAfterMutation):